--- a/mybatis-plus-sample-generator/pom.xml
+++ b/mybatis-plus-sample-generator/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
+            <version>3.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
